tests/models/enum/unnamed/f64/fail/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        f64
    ),
}
fn main() {}
